<package format="3">
  <name>tf2_web_republisher</name>
  <version>1.0.0</version>
  <description>Republishing of Selected TFs</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <author email="TODO@TODO.com">TODO</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tf2_web_republisher</url>
  <url type="bugtracker">https://github.com/RobotWebTools/tf2_web_republisher/issues</url>
  <url type="repository">https://github.com/RobotWebTools/tf2_web_republisher</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_web_republisher_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
