<package format="3">
  <name>tf2_web_republisher_msgs</name>
  <version>1.0.0</version>
  <description>Messages for tf2_web_republisher</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <author email="TODO@TODO.com">TODO</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
